fix: ui overflow-y error fix

--- a/frontend/vue/src/index.css
+++ b/frontend/vue/src/index.css
@@ -30,8 +30,3 @@ body {
 .v-application {
   font-family: 'Noto Sans KR' !important;
 }
-@media screen and (max-width: 600px) {
-  body {
-    overflow-y: hidden !important;
-  }
-}
